	%Ey field on input.
	* library/msgs/ja.msg:
	* tools/loadICU.tcl: Corrected several localisation faults in
	the Japanese locale (most notably, incorrect dates for the
	Emperors' eras). [Bug 1637471].  Many thanks to SourceForge
	user 'nyademo' for pointing this out and developing a fix.
	* generic/tclPathObj.c: Corrected a 'const'ness fault that
	caused bitter complaints from MSVC.
	* tests/clock.test (clock-40.1, clock-58.1): Corrected a
	test case that depended on ":localtime" being able to handle
	dates prior to the Posix epoch, [Bug 1618445]  Added a test 
	case for the dates of the Japanese emperors. [Bug 1637471]
	
2007-04-19  Donal K. Fellows  <donal.k.fellows@manchester.ac.uk>

	* generic/regcomp.c, generic/regc_cvec.c, generic/regc_lex.c,
	* generic/regc_locale.c: Improve the const-correctness of the RE
	compiler.

2007-04-18  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclExecute.c (INST_LSHIFT): fixed a mistake introduced in
	version 1.266 ('=' became '=='), which effectively turned the block
	that handles native shifts into dead code. This explains why the
	testsuite did not pick this mistake. Rewrote to make the intention
	clear.

2007-04-18  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclInt.h (TclDecrRefCount): change the order of the
	branches, use empty 'if ; else' to handle use in unbraced outer
	if/else conditions (as already done in tcl.h)

2007-04-18  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclExecute.c: slight changes in Tcl_Obj management.

2007-04-17  Kevin B. Kenny  <kennykb@acm.org>

	* library/clock.tcl: Fixed the naming of
	::tcl::clock::ReadZoneinfoFile because (yoicks!) it was in the global
	namespace.
	* doc/clock.n: Clarified the cases in which legacy time zone is
	recognized. [Bug 1656002]

2007-04-17  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclExecute.c: fixed checkInterp logic [Bug 1702212]

2007-04-16  Donal K. Fellows  <donal.k.fellows@man.ac.uk>
