@@ -16,10 +16,15 @@
 	user 'nyademo' for pointing this out and developing a fix.
 	* generic/tclPathObj.c: Corrected a 'const'ness fault that
 	caused bitter complaints from MSVC.
-	* tests/clock.test (clock-40.1, clock-58.1): Corrected a
+	* tests/clock.test (clock-40.1, clock-58.1, clock-59.1): Corrected a
 	test case that depended on ":localtime" being able to handle
 	dates prior to the Posix epoch, [Bug 1618445]  Added a test 
 	case for the dates of the Japanese emperors. [Bug 1637471]
+	Added a regression test for military time zone input conversion.
+	[Bug 1586828].
+	* generic/tclGetDate.y (MilitaryTable): Fixed an ancient bug where
+	the military NZA time zones had the signs reversed [Bug 1586828].
+	* generic/tclDate.c: Regenerated.
 	
 2007-04-19  Donal K. Fellows  <donal.k.fellows@manchester.ac.uk>
 
